// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Pill > should render 1`] = `
<div>
  <rk-pill
    tabindex="0"
  >
    <!---->
    <!---->
    
    <!---->
     
    <p>
      Hello
    </p>
    <!---->
    <!---->
     
    <!---->
  </rk-pill>
  
</div>
`;

exports[`Pill > should render with close button 1`] = `
<div>
  <rk-pill
    tabindex="0"
  >
    <!---->
    <!---->
    
    <!---->
     
    <p>
      Hello
    </p>
    <!---->
    <!---->
     
    <button>
      <rk-icon
        aria-label="remove"
        class=""
        role="img"
      >
        <i
          aria-hidden="true"
          class="remove"
        />
      </rk-icon>
      <!---->
    </button>
    <!---->
  </rk-pill>
  
</div>
`;

exports[`Pill > should render with disabled close button 1`] = `
<div>
  <rk-pill
    tabindex="0"
  >
    <!---->
    <!---->
    
    <!---->
     
    <p>
      Hello
    </p>
    <!---->
    <!---->
     
    <button
      disabled=""
    >
      <rk-icon
        aria-label="remove"
        class=""
        role="img"
      >
        <i
          aria-hidden="true"
          class="remove"
        />
      </rk-icon>
      <!---->
    </button>
    <!---->
  </rk-pill>
  
</div>
`;

exports[`Pill > should render with icon 1`] = `
<div>
  <rk-pill
    tabindex="0"
  >
    <!---->
    <rk-icon
      aria-label="Hello"
      class=""
      role="img"
    >
      <i
        aria-hidden="true"
        class="world"
      />
    </rk-icon>
    <!---->
     
    <p>
      Hello
    </p>
    <!---->
    <!---->
     
    <!---->
  </rk-pill>
  
</div>
`;

exports[`Pill > should render with image 1`] = `
<div>
  <rk-pill
    tabindex="0"
  >
    <!---->
    <!---->
    <img
      alt="Hello"
      src="world.png"
    />
    
    <!---->
     
    <p>
      Hello
    </p>
    <!---->
    <!---->
     
    <!---->
  </rk-pill>
  
</div>
`;
